first set of changes to site

--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -8,11 +8,11 @@
   <!-- the classes 'page-header' and 'btn btn-default' create bootstrap components.  -->
   <!-- Check out more components here: http://getbootstrap.com/components/ -->
   <div class="page-header">
-    <h1>YOYO web apps are so cool</h1>
+    <h1>Customer Support Escape Hatch</h1>
   </div>
 
   <p id="demo">
-    This is me testing out a lil html file
+    Click the button below for a free smile
   </p>
 
   <button class="btn btn-default" type="button" onclick="myFunction()">
